# smart_house_software

./: README.md
qrobot/: 55-qrobot.rules  CMakeLists.txt  CMakeLists.txt~  README.md
qrobot/doc/api/: annotated.html  classes.html  classqrobot_1_1Motion-members.html  classqrobot_1_1Motion.html  classqrobot_1_1QrobotController-members.html  classqrobot_1_1QrobotController.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  index.html  motion_8cpp.html  motion_8cpp_source.html  motion_8h.html  motion_8h_source.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespaceqrobot.html  namespaces.html  qrobot__controller_8cpp.html  qrobot__controller_8cpp_source.html  qrobot__controller_8h.html  qrobot__controller_8h_source.html  qrobot__demo_8cpp.html
qrobot/doc/api/search/: all_66.js  all_67.js  all_68.js  all_6c.js  all_70.js  all_71.js  all_76.js  all_77.js  classes_6d.js  classes_71.js  defines_75.js  enums_71.html  enums_71.js  enumvalues_68.js  enumvalues_6d.js  enumvalues_6e.js  enumvalues_75.js  files_71.html  files_71.js  functions_63.js  functions_65.js  functions_68.js  functions_69.js  functions_6d.js  functions_70.js  functions_71.js  functions_72.js  functions_73.js  namespaces_71.html  (+3 more)
qrobot/include/: QrobotController.h  QrobotController.h~
qrobot/lib/: asr_keywords_utf8.txt
qrobot/lib/msc/: isr.logcache  tts.logcache
qrobot/src/: .tags  .tags_sorted_by_file  CMakeLists.txt  CMakeLists.txt~  qrobot_demo.cpp  qrobot_demo.cpp~  simpleJson.py~
